packages/docsearch-react/src/style.css
/* Variables */

/* primary
secondary
bg
bg light
bg dark
text default
text muted
spacing
font size */

:root {
  --docsearch-input-color: var(--ifm-color-emphasis-800);
  --docsearch-highlight-color: var(--ifm-color-primary);
  --docsearch-placeholder-color: rgb(149, 165, 190);
  --docsearch-container-background: rgb(60, 72, 96, 0.5);
  --docsearch-modal-background: var(--ifm-color-emphasis-100);
  --docsearch-modal-shadow: inset 1px 1px 0px 0px rgba(255, 255, 255, 0.5),
    0px 3px 8px 0px rgba(116, 134, 169, 0.54);
  --docsearch-searchbox-background: rgb(212, 217, 225);
  --docsearch-searchbox-shadow: inset 1px 2px 6px 0px rgb(192, 196, 230),
    inset 0px 1px 1px 0px rgb(134, 146, 221), 1px 1px 0px 0px white;
  --docsearch-hit-color: var(--ifm-color-emphasis-800);
  --docsearch-hit-active-color: white;
  --docsearch-hit-icon-color: var(--ifm-color-emphasis-500);
  --docsearch-hit-tree-color: var(--ifm-color-emphasis-200);
  --docsearch-hit-background: white;
  --docsearch-hit-shadow: 0px 2px 6px 0px rgb(212, 217, 225);
  --docsearch-key-gradient: linear-gradient(
    -225deg,
    rgb(213, 219, 228) 0%,
    rgb(248, 248, 248) 100%
  );
  --docsearch-key-shadow: inset 0px -2px 0px 0px rgb(205, 208, 231),
    inset 0px 0px 1px 1px white, 0px 1px 2px 1px rgba(29, 37, 89, 0.38);
  --docsearch-footer-background: white;
  --docsearch-footer-shadow: 0px -5px 7px 0px rgba(69, 98, 155, 0.12);
  --docsearch-logo-color: #5468ff;
  --docsearch-label-color: var(--ifm-color-emphasis-500);

  --docsearch-modal-width: 590px;
  --docsearch-modal-height: 500px;
  --docsearch-searchbox-height: 60px;
  --docsearch-footer-height: 48px;
  --docsearch-spacing: 12px;
}

/* Darkmode */

html[data-theme='dark'] {
  --docsearch-highlight-color: var(--ifm-color-primary);
  --docsearch-container-background: rgba(9, 10, 17, 0.8);
  --docsearch-modal-background: rgb(21, 23, 42);
  --docsearch-modal-shadow: inset 1px 1px 0px 0px rgb(44, 46, 64),
    0px 3px 8px 0px rgb(0, 3, 9);
  --docsearch-searchbox-background: rgb(9, 10, 17);
  --docsearch-searchbox-shadow: inset 0px 0px 1px 1px rgba(84, 104, 255, 0.6);
  --docsearch-hit-color: var(--ifm-color-emphasis-500);
  --docsearch-hit-icon-color: var(--ifm-color-emphasis-300);
  --docsearch-hit-tree-color: rgba(109, 113, 163, 0.4);
  --docsearch-hit-shadow: none;
  --docsearch-hit-background: rgb(9, 10, 17);
  --docsearch-key-gradient: linear-gradient(
    -26.56505117707799deg,
    rgb(86, 88, 114) 0%,
    rgb(49, 53, 91) 100%
  );
  --docsearch-key-shadow: inset 0px -2px 0px 0px rgb(40, 45, 85),
    inset 0px 0px 1px 1px rgb(81, 87, 125), 0px 2px 2px 0px rgb(3, 4, 9);
  --docsearch-footer-background: rgb(30, 33, 54);
  --docsearch-footer-shadow: inset 0px 1px 0px 0px rgba(73, 76, 106, 0.52),
    0px -4px 8px 0px rgba(0, 0, 0, 0.34);
  --docsearch-logo-color: #fff;
  --docsearch-label-color: rgb(109, 113, 163);
}

/* Search Button */

.DocSearch-SearchButton {
  display: flex;
  height: 40px;
  margin: 0 0 0 20px;
  padding: 0 14px 0 12px;
  margin-left: 1rem;
  border: none;
  border-radius: 22px;
  cursor: pointer;
  align-items: center;
  box-shadow: var(--docsearch-searchbox-shadow);
  background: var(--docsearch-searchbox-background);
}

.DocSearch-SearchButton-Icon {
  color: var(--docsearch-highlight-color);
}

.DocSearch-SearchButton-Placeholder {
  margin: 0 8px;
  font-size: 1rem;
  font-weight: 400;
  color: var(--docsearch-placeholder-color);
}

.DocSearch-SearchButton-KeySeparator {
  margin: 0 2px;
  color: var(--docsearch-label-color);
}

.DocSearch-SearchButton-Key {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 21px;
  height: 19px;
  padding-bottom: 2px;
  border-radius: 3px;
  background: var(--docsearch-key-gradient);
  box-shadow: var(--docsearch-key-shadow);
  color: var(--ifm-color-emphasis-600);
}

/* Body modifier */

.DocSearch--active {
  /*
   * We need to mark it as important because some websites override the
   * `style` attribute (e.g. Docusaurus).
   */
  overflow: hidden !important;
}

/* Hide Docusaurus hamburger button when modal is opened */
.DocSearch--active .menu__button {
  display: none !important;
}

/* Container & Modal */

.DocSearch-Container,
.DocSearch-Container * {
  box-sizing: border-box;
}

.DocSearch-Container {
  height: 100vh;
  width: 100vw;
  position: fixed;
  left: 0;
  top: 0;
  background-color: var(--docsearch-container-background);
}

.DocSearch-Container a {
  text-decoration: none;
}

.DocSearch-Modal {
  position: relative;
  display: flex;
  flex-direction: column;
  width: 100%;
  max-width: var(--docsearch-modal-width);
  /* height: var(--docsearch-modal-height); */
  margin: 60px auto auto auto;
  border-radius: 6px;
  background: var(--docsearch-modal-background);
  box-shadow: var(--docsearch-modal-shadow);
}

/* Modal Searchbox */

.DocSearch-SearchBar {
  display: flex;
  margin: 12px;
}

.DocSearch-Form {
  display: flex;
  flex: 1;
  position: relative;
  height: var(--docsearch-searchbox-height);
  padding: 0 12px;
  align-items: center;
  border-radius: 4px;
  background: var(--docsearch-searchbox-background);
  box-shadow: var(--docsearch-searchbox-shadow);
}

.DocSearch-Input {
  height: 100%;
  flex-grow: 1;
  padding-left: 8px;
  font: inherit;
  font-size: 1.2em;
  appearance: none;
  border: none;
  outline: none;
  background: transparent;
  color: var(--docsearch-input-color);
}

.DocSearch-Input::placeholder {
  color: var(--docsearch-placeholder-color);
}

.DocSearch-Input::-webkit-search-cancel-button,
.DocSearch-Input::-webkit-search-decoration,
.DocSearch-Input::-webkit-search-results-button,
.DocSearch-Input::-webkit-search-results-decoration {
  display: none;
}

.DocSearch-LoadingIndicator,
.DocSearch-MagnifierLabel,
.DocSearch-Reset {
  height: 30px;
  width: 30px;
  margin: 0;
  padding: 0;
}

.DocSearch-Container--Stalled .DocSearch-LoadingIndicator,
.DocSearch-MagnifierLabel,
.DocSearch-Reset {
  display: flex;
  align-items: center;
  justify-content: center;
}

.DocSearch-Container--Stalled .DocSearch-MagnifierLabel,
.DocSearch-LoadingIndicator {
  display: none;
}

.DocSearch-Reset {
  appearance: none;
  right: 0;
  border: none;
  border-radius: 50%;
  background: none;
  cursor: pointer;
}

.DocSearch-Reset[hidden] {
  display: none;
}

.DocSearch-Reset:focus {
  outline: none;
}

.DocSearch-Reset svg {
  height: 10px;
  width: 10px;
}

.DocSearch-LoadingIndicator svg,
.DocSearch-MagnifierLabel svg {
  height: 26px;
  width: 26px;
}

.DocSearch-MagnifierLabel {
  color: var(--docsearch-highlight-color);
}

.DocSearch-Cancel {
  display: none;
}

/* Modal Dropdown */

.DocSearch-Dropdown {
  height: calc(var(--docsearch-modal-height) - var(--docsearch-searchbox-height) - var(--docsearch-spacing)*2 - var(--docsearch-footer-height));
  padding: 0 12px 20px;
  margin-bottom: var(--docsearch-footer-height);
  flex: 1 0 auto;
  overflow-y: scroll;
  letter-spacing: 0.02em;
}

.DocSearch-Dropdown ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

.DocSearch-Dropdown-Container {
  position: relative;
}

/* Modal Footer */

.DocSearch-Footer {
  display: flex;
  position: absolute;
  bottom: 0;
  width: 100%;
  height: var(--docsearch-footer-height);
  padding: 0 12px;
  flex-direction: row-reverse;
  flex-shrink: 0;
  justify-content: space-between;
  align-items: center;
  border-radius: 0 0 8px 8px;
  background: var(--docsearch-footer-background);
  box-shadow: var(--docsearch-footer-shadow);
}

.DocSearch-Commands {
  display: flex;
  margin: 0;
  padding: 0;
  list-style: none;
}

.DocSearch-Commands li:not(:last-of-type) {
  margin-right: 12px;
}

.DocSearch-Commands {
  display: flex;
  color: var(--ifm-color-emphasis-600);
}

.DocSearch-Commands li {
  display: flex;
  align-items: center;
}

.DocSearch-Commands-Key {
  display: flex;
  align-items: center;
  justify-content: center;
  width: 21px;
  height: 19px;
  padding-bottom: 2px;
  border-radius: 2px;
  margin-right: 6px;
  background: var(--docsearch-key-gradient);
  box-shadow: var(--docsearch-key-shadow);
}


.DocSearch-Logo a {
  display: flex;
}

.DocSearch-Logo svg {
  margin-left: 8px;
  color: var(--docsearch-logo-color);
}

.DocSearch-Label {
  font-size: 0.75em;
  line-height: 1.8em;
  color: var(--docsearch-label-color);
}

/* Hit */

.DocSearch-Hits{
  margin-bottom: 12px;
}

.DocSearch-Hits mark {
  background: none;
  color: var(--docsearch-highlight-color);
}

.DocSearch-Hit {
  display: flex;
  position: relative;
  border-radius: 4px;
  background: var(--docsearch-hit-background);
  box-shadow: var(--docsearch-hit-shadow);
  padding-left: 12px;
  margin-bottom: 4px;
}

.DocSearch-Hit-source {
  line-height: 30px;
  font-size: 0.85em;
  font-weight: 600;
  color: var(--docsearch-highlight-color);
  letter-spacing: 0;
  position: sticky;
  top: 0;
  z-index: var(--ifm-z-index-fixed);
  background: var(--docsearch-modal-background);
  /* hide hit shadow */
  box-shadow: 0 -4px 0 4px var(--docsearch-modal-background);
}

.DocSearch-Hit-Tree {
  width: 30px;
  height: 60px;
  margin-right: 4px;
  color: var(--docsearch-hit-tree-color);
}

.DocSearch-Hit[aria-selected='true'] {
  /* transition: background-color ease 0.1s; */
  background-color: var(--docsearch-highlight-color);
}

.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-title,
.DocSearch-Hit[aria-selected='true'] mark,
.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-text,
.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-path,
.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-icon,
.DocSearch-Hit[aria-selected='true'] .DocSearch-Hit-action {
  color: var(--docsearch-hit-active-color) !important;
}

.DocSearch-Hit a {
  display: block;
  height: 60px;
  border-radius: 4px;
  width: 100%;
}

.DocSearch-Hit[aria-selected='true'] mark {
  text-decoration: underline;
}

.DocSearch-Hit-Container {
  display: flex;
  height: 60px;
  padding: 0 12px 0 0;
  flex-direction: row;
  align-items: center;
  color: var(--docsearch-hit-color);
}

.DocSearch-Hit-icon {
  height: 20px;
  width: 20px;
  margin-right: 8px;
  color: var(--docsearch-hit-icon-color);
}

.DocSearch-Hit-content-wrapper {
  display: flex;
  flex: 1 0 auto;
  white-space: nowrap;
  overflow: hidden;
  width: 80%;
  justify-content: center;
  flex-direction: column;
  line-height: 1.1em;
  position: relative;
}

.DocSearch-Hit-title {
  font-size: 0.9em;
  font-weight: 500;
}

.DocSearch-Hit-path {
  font-size: 0.7em;
  color: var(--docsearch-label-color);
}

.DocSearch-Hit-action {
  height: 20px;
  width: 20px;
  margin-left: 8px;
  color: var(--docsearch-hit-icon-color);
}

/* Icons */

/* Responsive */


/* @media only screen and (max-device-width: 1024px) { */
  @media (max-width: 750px){
    :root {
      /* quickfix https://stackoverflow.com/questions/37112218/css3-100vh-not-constant-in-mobile-browser */
      --docsearch-modal-height: calc(100vh - 110px);
    }
    .DocSearch-SearchButton-KeySeparator,
    .DocSearch-SearchButton-Key {
      display: none;
    }
    .DocSearch-Modal {
      border-radius: 0;
      box-shadow: none;
      margin: 0 auto;
    }
    .DocSearch-Cancel {
      display: inline-block;
      appearance: none;
      background: none;
      border: 0;
      font: inherit;
      cursor: pointer;
      color: var(--docsearch-highlight-color);
      margin-left: var(--docsearch-spacing);
      padding: 0;
      font-size: 1em;
      font-weight: 500;
      letter-spacing: 0.02em;
    }
    .DocSearch-Commands {
      display: none
    }
    .DocSearch-Hit {
      letter-spacing: 0;
    }
  }

/* todo: hide keyboard shortcut on smartphones, touchscreens device - cross browser limitation with media q, maybe js is better https://codepen.io/Ferie/pen/vQOMmO?editors=1010 */
@media (hover: none) and (pointer: coarse) {
  /* ... */
}

